[gd_scene load_steps=4 format=3 uid="uid://cby33eqbpo8if"]

[ext_resource type="Script" uid="uid://bhd5hre54io2a" path="res://howto_play.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://eannhm5r1e5t" path="res://assets/Backgrounds/black.jpg" id="2"]
[ext_resource type="FontFile" uid="uid://cfcoltj5j404i" path="res://assets/Fonts/kenvector_future_thin.ttf" id="3"]

[node name="HowtoPlay" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_left = -17.0
offset_right = 1303.0
offset_bottom = 990.0
texture = ExtResource("2")

[node name="TutorialBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="InstructionsLabel" type="Label" parent="TutorialBox"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3")
theme_override_font_sizes/font_size = 20
text = "üïπÔ∏è Use Left/Right Arrow Keys to Move
‚¨ÜÔ∏è Press Up or Spacebar to Jump
üèÜ Collect 5 Coins to Win
üíÄ Don't Fall Off or Run Out of Time/Lives"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CountdownLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 303.0
offset_top = 267.0
offset_right = 962.0
offset_bottom = 302.0
theme_override_fonts/font = ExtResource("3")
theme_override_font_sizes/font_size = 30
text = "Get Ready. Youre game will begin in: 5"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CountdownTimer" type="Timer" parent="."]
autostart = true

[connection signal="timeout" from="CountdownTimer" to="." method="_on_countdown_timer_timeout"]
[connection signal="timeout" from="CountdownTimer" to="." method="_on_auto_start_timer_timeout"]
